# task_trainee_2025

./: CMakeLists.txt  README.md  common.hpp  config.json  log.txt  main.cpp  task.txt
field/: cell.cpp  cell.hpp  field.cpp  field.hpp
input_system/: collector.cpp  collector.hpp  json.cpp  json.hpp  parser_json.cpp  parser_json.hpp
log_system/: logging.cpp  logging.hpp
robot/: robot.cpp  robot.hpp
system/: navigator.cpp  navigator.hpp  system.cpp  system.hpp
tests/: duration.hpp  test.cpp
tests/configs/: config1.json  config10.json  config2.json  config3.json  config4.json  config5.json  config6.json  config7.json  config8.json  config9.json  config_max.json
tests/logs/: log1.txt  log10.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt  log8.txt  log9.txt
tests/tasks/: task10.txt  task4.txt  task8.txt  task9.txt  task_max.txt
